--- a/_posts/2018-08-21-apples.md
+++ b/_posts/2018-08-21-apples.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 20180821 - all dem apples
+title: All dem apples
 tags: apples fruit
-author: morty
+author: Morty Smith
 ---
 
 An apple is a sweet, edible fruit produced by an apple tree.
